[package]
name = "nimiq-rpc"
version = "0.1.0"
authors = ["Stefan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "0.8", features = ["json"]}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"